trying to fix blurry dropdown arrow

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -116,7 +116,7 @@
 .dropdown-style{
   color: #F6D185;
   padding-left: 10px;
-  padding-right: 20px;
+  padding-right: 10px;
   display: inline-block;
   border-bottom: 1px solid #FFF;
 }
@@ -174,8 +174,8 @@ option[default]{
 
 /* style icon */
 .inner-addon .glyphicon {
-  position: absolute;
-  padding: 5px 15px;
+  position: relative;
+  padding: 5px 0px;
   pointer-events: none;
 }
 
@@ -191,8 +191,7 @@ option[default]{
   font-family: 'Museo Sans', Verdana, sans-serif;
   font-size: 15px;
   align:center;
-  width: 8px;
-  height: 8px;
+  height:5px;
 
 }
 
